Updated Getting started

--- a/building_site_next_steps.html
+++ b/building_site_next_steps.html
@@ -42,6 +42,11 @@
 			</ul>
 		</section>
 		<section>
+			<h2>Using Menus</h2>
+			<p><a href="https://sites.stanford.edu/uccm/admin/structure/menu/manage/main-menu" target="_blank">Edit main menu</a></p>
+		</section>
+
+		<section>
 			<h2><a href="http://jse.dev/">Demo?</a></h2>
 		</section>
 		<section>
