--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!doctype html>
+<!doctype html>
 <html>
 <head>
 	<meta charset="utf-8">
@@ -28,8 +29,8 @@
 				<h1>Presentations</h1>
 				<ul>
 					<li><a href="50_ways.html#/">50 Ways</a></li>
-					<li></li>
-					<li></li>
+					<li><a href="demo.html#/">Reveal JS Demo</a></li>
+					<li><a href="building_site_next_steps.html#/">Next steps for building a site</a></li>
 				</ul>
 			</section>
 
