Updated 50_ways and building_site

--- a/50_ways.html
+++ b/50_ways.html
@@ -41,6 +41,14 @@
 						Stanford Web Services<br>
 						cjwest@stanford.edu<br>
 					</section>
+					<section>
+						<h2>Agenda</h2>
+						<ul>
+							<li>About Stanford sites</li>
+							<li>Getting started with your site</li>
+							<li>Questions and demos</li>
+						</ul>
+					</section>
 				</section>
 
 				<section>
@@ -76,13 +84,14 @@
 						<li>Enable Modules</li>
 						<li>Create a page</li>
 						<li>Create a homepage</li>
+						<li>Administer Content</li>
 					</ul>
 				</section>
 
 				<!-- Request a site -->
 				<section>
 					<section>
-						<h1>Request a site</h1>
+						<h2>Requesting a site</h2>
 						<a href="http://sites.stanford.edu" target="_blank">http://sites.stanford.edu</a>
 					</section>
 					<section>
@@ -104,7 +113,7 @@
 						<iframe src="file:///Users/cjwest/Documents/presentations/images/new-site-home-page.png" width="775" height="400" frameborder="0" marginwidth="0" marginheight="0" scrolling="yes" style="border:3px solid #666; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe>
 					</section>
 					<section>
-						<p><a href="#/5">Now, let's enable modules</a></p>
+						<p><a href="#/4">Now, let's enable modules</a></p>
 					</section>
 
 				</section>
@@ -119,17 +128,17 @@
 					<section>
 						<h2>Modules Page </h2>
 						<img data-src="file:///Users/cjwest/Documents/presentations/images/drupal-modules-page-stanford-page.png" width="800" height="400" alt="Drupal modules page">
-						<p><a href="https://sites.stanford.edu/uccm/admin/modules" target="_blank">/admin/modules</a></p>
+						<p><a href="https://sites.stanford.edu/uccm/admin/modules" target="_blank">Administration » Modules</a></p>
 					</section>
 					<section>
 						<h2>Features Page</h2>
 						<img data-src="file:///Users/cjwest/Documents/presentations/images/features-page.png" width="800" height="500" alt="Drupal features page">
-						<a href="https://sites.stanford.edu/uccm/admin/structure/features" target="_blank">/admin/structure/features</a>
+						<a href="https://sites.stanford.edu/uccm/admin/structure/features" target="_blank">Administration » Structure » Features</a>
 					</section>
 					<section>
 						<h2>Stanford Features</h2>
 						<iframe src="file:///Users/cjwest/Documents/presentations/images/stanford-features.png" width="1055" height="500" frameborder="0" marginwidth="0" marginheight="0" scrolling="yes" style="border:3px solid #666; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe>
-						<p><a href="https://sites.stanford.edu/uccm/admin/structure/features" target="_blank">/admin/structure/features</a></p>
+						<p><a href="https://sites.stanford.edu/uccm/admin/structure/features" target="_blank">Administration » Structure » Features » Stanford</a></p>
 					</section>
 					<section>
 						<h2>Troubleshooting Features Tip</h2>
@@ -140,7 +149,7 @@
 						</section>
 
 						<section>
-							<p><a href="#/6">Now, let's create some content</a></p>
+							<p><a href="#/5">Now, let's create some content</a></p>
 						</section>
 					</section>
 
@@ -166,8 +175,8 @@
 							<h2>About page</h2>
 							<img data-src="file:///Users/cjwest/Documents/presentations/images/about-page.png" width="800" height="400" alt="New site instance form">
 						</section>
-            <section>
-							<p><a href="#/7">Now, let's create a homepage</a></p>
+						<section>
+							<p><a href="#/6">Now, let's create a homepage</a></p>
 						</section>
 					</section>
 
@@ -187,12 +196,12 @@
 								<p><a href="https://sites.stanford.edu/uccm/node/add/stanford-landing-page" target="_blank">Using Stanford Landing Page</a></p>
 								<iframe src="file:///Users/cjwest/Documents/presentations/images/landing-page-edit.png" width="838" height="600" frameborder="0" marginwidth="0" marginheight="0" scrolling="yes" style="border:3px solid #666; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe>
 							</section>
-						  <section>
+							<section>
 								<h2>Make it your Home page</h2>
 								<p><a href="https://sites.stanford.edu/uccm/admin/config/system/site-information" target="_blank">» Administration » Configuration » System</a></p>
 								<iframe src="file:///Users/cjwest/Documents/presentations/images/make-homepage.png" width="100%" height="500" frameborder="0" marginwidth="0" marginheight="0" scrolling="yes" style="border:3px solid #666; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe>
 							</section>
-      	      <section>
+							<section>
 								<h2> Here's your homepage </h2>
 								<p>Using <em>Blocks</em> layout</p>
 								<iframe src="file:///Users/cjwest/Documents/presentations/images/landing-page-with-blocks.png" width="800" height="480" frameborder="0" marginwidth="0" marginheight="0" scrolling="yes" style="border:3px solid #666; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe>
@@ -209,7 +218,14 @@
 							</section>
 						</section>
 
-						<!-- Next steps -->
+							<!-- Drupal's content administration -->
+							<section>
+								<h2>Administer your content</h2>
+								<p> <a href="https://sites.stanford.edu/uccm/admin/content" target="_blank">Home » Administration » Content </a></p>
+      					<iframe src="file:///Users/cjwest/Documents/presentations/images/administer-content.png" width="100%" height="400" frameborder="0" marginwidth="0" marginheight="0" scrolling="yes" style="border:3px solid #666; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe>
+							</section>
+
+							<!-- Next steps -->
 						<section>
 							<section>
 								<h2>Review</h2>
@@ -221,7 +237,9 @@
 									<ul>
 										<li>Stanford Page</li>
 										<li>Stanford Landing Page</li>
-									</ul></ul>
+									</ul>
+									<li>Adminster content</li>
+								</ul>
 
 								</section>
 								<section>
