--- a/building_site_next_steps.html
+++ b/building_site_next_steps.html
@@ -24,74 +24,214 @@
 <body>
 	<div class="reveal">
 		<div class="slides">
-		<section>
-			<h1>Next Steps</h1>
-			<p><em>What would you like to learn about?</em></p>
-			<ul>
-				<li>Menus</li>
-				<li>Blocks</li>
-				<li>News</li>
-				<li>Events</li>
-				<li>Events series</li>
-				<li>Courses</li>
-				<li>People</li>
-				<li>Drupal's content and file manager</li>
-				<li>CSS Injector</li>
-				<li>Theme/Appearance</li>
-				<li>Other?</li>
-			</ul>
-		</section>
-		<section>
-			<h2>Using Menus</h2>
-			<p><a href="https://sites.stanford.edu/uccm/admin/structure/menu/manage/main-menu" target="_blank">Edit main menu</a></p>
-		</section>
-
-		<section>
-			<h2><a href="http://jse.dev/">Demo?</a></h2>
-		</section>
-		<section>
-			<br>
-			<p><em>Learn more at:</em></p>
-			<p><a href="https://swsblog.stanford.edu/blog/getting-started-sites-how-request-personal-drupal-site" target="_blank">
-				How to Request a Personal Drupal Site</a>
-				<br>
-				<a href="https://swsblog.stanford.edu/" target="_blank">
-					https://swsblog.stanford.edu/</a></p>
-					<h2>Questions?</h2>
-				</section>
-
-			</section>
 			<section>
-				 <h2>Thank you!</h2>
+				<h2>Next Steps</h2>
+				<p><em>What would you like to learn about?</em></p>
+				<table>
+					<tbody>
+						<tr>
+							<td><a href="#/1">Menus</a></td>
+							<td><a href="#/2">Blocks</a></td>
+						</tr>
+						<tr>
+							<td><a href="#/3">News</a></td>
+							<td><a href="#/4">Events</a></td>
+						</tr>
+						<tr>
+							<td><a href="#/5">Courses</a></td>
+							<td><a href="#/6">People</a></td>
+						</tr>
+						<tr>
+							<td><a href="#/7">Editing content (WYSIWYG)</a></td>
+						</tr>
+					</tbody>
+				</table>
+				<p>Something else?</p>
+
+				<p class="fragment"><em><a href="50_ways.html#/2">Back to Getting Started >></a></em></li></p>
+			</section>
+
+			<section id="menus">
+				<h2>Using Menus</h2>
+				<p><a href="https://sites.stanford.edu/uccm/admin/structure/menu/manage/main-menu" target="_blank">Editing Main menu</a></p>
+				<p class="fragment"><em><a href="#/0">What next?</a></em></p>
+			</section>
+
+			<section id="blocks">
+				<section>
+					<h2>Stanford Bean Types</h2>
+					<p>Enable modules: </p>
+					<ul>
+						<li>Bean</li>
+						<li>Bean Admin UI</li>
+						<li>Stanford Bean Types</li>
+						<li>Stanford Bean Types Permissions</li>
+					</ul>
+					<p><em>Beans are blocks that have more features</em></p>
 				</section>
 				<section>
-					<h2>Where to next?</h2>
-					<ul>
-		  			<li><a href="50_ways.html#/">50 Ways</a></li>
-		  			<li><a href="50_ways.html#/7/2">50 Ways lyrics</a></li>
-					</ul>
+					<h2>Using Blocks</h2>
+					<p><a href="https://sites.stanford.edu/uccm/block/add" target="_blank">Adding blocks </a>
+						<br>
+						<a href="https://sites.stanford.edu/uccm/admin/structure/block" target="_blank">Placing blocks </a></p>
+						<p class="fragment"><em><a href="#/0">What next?</a></em></p>
+					</section>
 				</section>
 
+				<section id="news">
+					<section>
+						<h2>Stanford News</h2>
+						<p>Enable modules: </p>
+						<ul>
+							<li>Stanford News</li>
+							<li>Stanford News Views</li>
+						</ul>
+					</section>
+					<section>
+						<h2>Using News</h2>
+						<ul>
+							<li><a href="https://sites.stanford.edu/uccm/node/add/stanford-news-item" target="_blank">Adding a news item</a></li>
+							<li><a href="https://sites.stanford.edu/uccm/news/recent-news" target="_blank">Displaying multiple news items</a></li>
+						</ul>
+						<p class="fragment"><em><a href="#/0">What next?</a></em></p>
+					</section>
+				</section>
 
-		</div>
-	</div>
+				<section id="events">
+					<section>
+						<h2>Stanford Events</h2>
+						<p>Enable modules: </p>
+						<ul>
+							<li>Stanford Events</li>
+							<li>Stanford Event Views</li>
+							<li>Stanford Event Importer</li>
+						</section>
+						<section>
+							<h2>Using Events</h2>
+							<ul>
+								<li><a href="https://sites.stanford.edu/uccm/node/add/stanford-event" target="_blank">Adding an Event</a></li>
+								<li><a href="https://sites.stanford.edu/uccm/events/upcoming-events" target="_blank">Displaying multiple upcoming events</a></li>
+								<li><a href="https://sites.stanford.edu/uccm/node/add/stanford-event-importer" target="_blank">Importing events</a></li>
+							</ul>
+						</section>
+						<section>
+							<h2>Learn about importing events</h2>
+							<p>	<a href="https://swsblog.stanford.edu/" target="_blank">https://swsblog.stanford.edu/</a>
+								<br>
+								See blog post:
+								<br>
+								<em>Module of the day: Stanford Events Importer</em></p>
+								<p class="fragment"><em><a href="#/0">What next?</a></em></p>
+							</section>
+						</section>
 
-	<script src="lib/js/head.min.js"></script>
-	<script src="js/reveal.js"></script>
 
-	<script>
-	// More info https://github.com/hakimel/reveal.js#configuration
-	Reveal.initialize({
-		history: true,
+						<section id="courses">
+							<section>
+								<h2>Stanford Courses</h2>
+								<p>Enable modules: </p>
+								<ul>
+									<li>Stanford Courses</li>
+									<li>Stanford Course Views</li>
+								</ul>
+							</section>
+							<section>
+								<h2>Using Courses</h2>
+								<ul>
+									<li><a href="https://sites.stanford.edu/uccm/node/add/stanford-course-importer" target="_blank">Importing courses</a></li>
+									<li><a href="https://sites.stanford.edu/uccm/courses/search" target="_blank">Displaying multiple courses</a></li>
+								</ul>
+							</section>
+							<section>
+								<h2>Learn about importing courses</h2>
+								<p><a href="https://swsblog.stanford.edu/" target="_blank">https://swsblog.stanford.edu/</a></p>
+								<p>See blog post:
+									<br> <em>Importing Courses from ExploreCourses</em></p>
+									<br>
+									<p class="fragment"><em><a href="#/0">What next?</a></em></p>
+								</section>
+							</section>
 
-		// More info https://github.com/hakimel/reveal.js#dependencies
-		dependencies: [
-			{ src: 'plugin/markdown/marked.js' },
-			{ src: 'plugin/markdown/markdown.js' },
-			{ src: 'plugin/notes/notes.js', async: true },
-			{ src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } }
-		]
-	});
-	</script>
-</body>
-</html>
+							<section id="people">
+								<section>
+									<h2>Stanford Person</h2>
+									<p>Enable modules: </p>
+									<ul>
+										<li>Stanford Person</li>
+										<li>Stanford Person Views</li>
+									</ul>
+								</section>
+								<section>
+									<h2>Using People</h2>
+									<ul>
+										<li><a href="https://sites.stanford.edu/uccm/people/all/grid" target="_blank">Displaying multiple people</a></li>
+										<li><a href="https://sites.stanford.edu/uccm/node/add/stanford-person" target="_blank">Adding a person</a></li>
+									</ul>
+								</section>
+								<section>
+									<h2>Learn about linking profiles </h2>
+									<p><a href="https://swsblog.stanford.edu/" target="_blank">https://swsblog.stanford.edu/</a></p>
+									<p>See blog post:
+										<br> <em>Using Stanford Feeds for easier content maintenance</em></p>
+										<br>
+										<p class="fragment"><em><a href="#/0">What next?</a></em></p>
+									</section>
+								</section>
+
+								<section id="wysiwug">
+									<section>
+										<h2>Using the Text Editor</h2>
+										<p><a href="https://sites.stanford.edu/uccm/node/add/stanford-page" target="_blank">Editing Text</a></p>
+									</section>
+									<section>
+										<h2>Do more with the editor </h2>
+										<p><a href="https://swsblog.stanford.edu/" target="_blank">
+											https://swsblog.stanford.edu/</a></p>
+											<p>See blog post: <br><em>Doing more with the editor, Part 1, adding CSS styles</em></p>
+											<p class="fragment"><em><a href="#/0">What next?</a></em></p>
+										</section>
+									</section>
+
+
+									<section>
+										<h2>Questions?</h2>
+									</section>
+
+									<section>
+										<h2>Thank you!</h2>
+										<p><em>Remember to check out our blog:</em> </p>
+										<p><a href="https://swsblog.stanford.edu/" target="_blank">
+											https://swsblog.stanford.edu/</a></p>
+										</section>
+										<section>
+											<h2>Where to next?</h2>
+											<ul>
+												<li><a href="50_ways.html#/">50 Ways</a></li>
+												<li><a href="50_ways.html#/7/2">50 Ways lyrics</a></li>
+												<li><a href="building_site_next_steps.html#/0">Back to Next Steps</a></li>
+											</ul>
+										</section>
+
+
+									</div>
+								</div>
+
+								<script src="lib/js/head.min.js"></script>
+								<script src="js/reveal.js"></script>
+
+								<script>
+								// More info https://github.com/hakimel/reveal.js#configuration
+								Reveal.initialize({
+									history: true,
+
+									// More info https://github.com/hakimel/reveal.js#dependencies
+									dependencies: [
+										{ src: 'plugin/markdown/marked.js' },
+										{ src: 'plugin/markdown/markdown.js' },
+										{ src: 'plugin/notes/notes.js', async: true },
+										{ src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } }
+									]
+								});
+								</script>
+							</body>
+							</html>
