Update images and speaker notes

--- a/building_site_next_steps.html
+++ b/building_site_next_steps.html
@@ -49,6 +49,15 @@
 				<p>Something else?</p>
 
 				<p class="fragment"><em><a href="50_ways.html#/2">Back to Getting Started >></a></em></li></p>
+				<p class="fragment"><em><a href="#/8">Wrap it up >></a></em></li></p>
+				<aside class="notes">
+					<ul>
+						<li>Now it's your turn!</li>
+						<li>Here's a list of topics.</li>
+						<li>Please tell me, what topic would you like me you'd like me to cover</li>
+					</ul>
+				</aside>
+
 			</section>
 
 			<section id="menus">
@@ -71,9 +80,11 @@
 				</section>
 				<section>
 					<h2>Using Blocks</h2>
-					<p><a href="https://sites.stanford.edu/uccm/block/add" target="_blank">Adding blocks </a>
-						<br>
-						<a href="https://sites.stanford.edu/uccm/admin/structure/block" target="_blank">Placing blocks </a></p>
+					<ul>
+						<li><a href="https://sites.stanford.edu/uccm/admin/people/permissions" target="_blank">Verify permissions</a></li>
+					  <li><a href="https://sites.stanford.edu/uccm/block/add" target="_blank">Adding blocks </a></li>
+						<li><a href="https://sites.stanford.edu/uccm/admin/structure/block" target="_blank">Placing blocks </a></p></li>
+					</ul>
 						<p class="fragment"><em><a href="#/0">What next?</a></em></p>
 					</section>
 				</section>
@@ -207,7 +218,7 @@
 											<h2>Where to next?</h2>
 											<ul>
 												<li><a href="50_ways.html#/">50 Ways</a></li>
-												<li><a href="50_ways.html#/7/2">50 Ways lyrics</a></li>
+												<li><a href="50_ways.html#/10">50 Ways lyrics</a></li>
 												<li><a href="building_site_next_steps.html#/0">Back to Next Steps</a></li>
 											</ul>
 										</section>
