--- a/50_ways.html
+++ b/50_ways.html
@@ -27,14 +27,14 @@
 
 			<section>
 				<section>
-					<h1>50 Ways</h1>
-					<p><em>to build your site on Stanford sites</em></p>
+					<h1>Building Your Site</h1>
+					<p><em>on Stanford sites</em></p>
 					<br>
-					<p><strong>Stanford Drupal Camp</strong><br>
-						March 10 & 11, 2017<br>
-						<a href="https://drupalcamp.stanford.edu/" target="_blank">https://drupalcamp.stanford.edu/</a></p>
+					<p><strong>Stanford UIT Summit</strong><br>
+						May 10, 2017<br>
+						<a href="https://uit.stanford.edu/community/summit" target="_blank">https://uit.stanford.edu/community/summit</a></p>
 						<aside class="notes">
-							Good afternoon, and welcome to Stanford Drupal camp. How has the camp been so far? Has anyone seen any really great presentations?
+							Good afternoon, and welcome to the UIT Summit. How has the camp been so far? Has anyone seen any really great presentations?
 							<br>
 							How many of you have websites?
 							<br>
@@ -136,7 +136,7 @@
 								<li>Administer Content</li>
 							</ul>
 							<aside class="notes">
-								To start with, I'll cover steps for getting started.
+								First, I'll cover steps for getting started.
 							</aside>
 
 						</section>
@@ -190,7 +190,7 @@
 							<section>
 								<h2>Modules Page </h2>
 								<img data-src="file:///Users/cjwest/Documents/presentations/images/drupal-modules-page-stanford-page.png" width="800" height="400" alt="Drupal modules page">
-								<p><a href="https://sites.stanford.edu/uccm/admin/modules" target="_blank">Administration » Modules</a></p>
+								<p><a href="https://sites.stanford.edu/sites-demo/admin/modules" target="_blank">Administration » Modules</a></p>
 								<aside class="notes">
 									<ul>
 										<li>On your Stanford site, you have two places you can enable modules.</li>
@@ -201,18 +201,18 @@
 							<section>
 								<h2>Features Page</h2>
 								<img data-src="file:///Users/cjwest/Documents/presentations/images/features-page.png" width="800" height="500" alt="Drupal features page">
-								<a href="https://sites.stanford.edu/uccm/admin/structure/features" target="_blank">Administration » Structure » Features</a>
+								<a href="https://sites.stanford.edu/sites-demo/admin/structure/features" target="_blank">Administration » Structure » Features</a>
 							</section>
 							<section>
 								<h2>Stanford Features</h2>
 								<iframe src="file:///Users/cjwest/Documents/presentations/images/stanford-features.png" width="1055" height="500" frameborder="0" marginwidth="0" marginheight="0" scrolling="yes" style="border:3px solid #666; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe>
-								<p><a href="https://sites.stanford.edu/uccm/admin/structure/features" target="_blank">Administration » Structure » Features » Stanford</a></p>
+								<p><a href="https://sites.stanford.edu/sites-demo/admin/structure/features" target="_blank">Administration » Structure » Features » Stanford</a></p>
 							</section>
 							<section>
 								<h2>Troubleshooting Features Tip</h2>
 								<p>If your feature is missing a field or behaving strangely, it may need to be reverted.
 									Click on "Override" to inspect a feature. You can then select components to override. </p>
-									<p><a href="https://sites.stanford.edu/uccm/admin/structure/features" target="_blank">Let's take a look >></a></p>
+									<p><a href="https://sites.stanford.edu/sites-demo/admin/structure/features" target="_blank">Let's take a look >></a></p>
 
 								</section>
 
@@ -231,12 +231,12 @@
 										<li>Can place it on a menu</li>
 									</ul>
 
-									<p><a href="http://sites.stanford.edu/uccm/about" target="_blank">Example about page</a></p>
+									<p><a href="http://sites.stanford.edu/sites-demo/about" target="_blank">Example about page</a></p>
 								</section>
 
 								<section>
 									<h2> Create a page </h2>
-									<p><a href="https://sites.stanford.edu/uccm/node/add/stanford-page" target="_blank">Using Stanford Page</a></p>
+									<p><a href="https://sites.stanford.edu/sites-demo/node/add/stanford-page" target="_blank">Using Stanford Page</a></p>
 									<iframe src="file:///Users/cjwest/Documents/presentations/images/stanford-page-edit-with-menu.png" width="832" height="500" frameborder="0" marginwidth="0" marginheight="0" scrolling="yes" style="border:3px solid #666; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe>
 								</section>
 								<section>
@@ -257,16 +257,16 @@
 											<li>Lots of features</li>
 											<li>Add it to a menu</li>
 										</ul>
-										<p><a href="http://sites.stanford.edu/uccm/home" target="_blank">Example landing page</a></p>
+										<p><a href="http://sites.stanford.edu/sites-demo/home" target="_blank">Example landing page</a></p>
 									</section>
 									<section>
 										<h2> Create a landing page </h2>
-										<p><a href="https://sites.stanford.edu/uccm/node/add/stanford-landing-page" target="_blank">Using Stanford Landing Page</a></p>
+										<p><a href="https://sites.stanford.edu/sites-demo/node/add/stanford-landing-page" target="_blank">Using Stanford Landing Page</a></p>
 										<iframe src="file:///Users/cjwest/Documents/presentations/images/landing-page-edit.png" width="838" height="600" frameborder="0" marginwidth="0" marginheight="0" scrolling="yes" style="border:3px solid #666; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe>
 									</section>
 									<section>
 										<h2>Make it your Home page</h2>
-										<p><a href="https://sites.stanford.edu/uccm/admin/config/system/site-information" target="_blank">» Administration » Configuration » System</a></p>
+										<p><a href="https://sites.stanford.edu/sites-demo/admin/config/system/site-information" target="_blank">» Administration » Configuration » System</a></p>
 										<iframe src="file:///Users/cjwest/Documents/presentations/images/make-homepage.png" width="100%" height="500" frameborder="0" marginwidth="0" marginheight="0" scrolling="yes" style="border:3px solid #666; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe>
 									</section>
 									<section>
@@ -289,7 +289,7 @@
 								<!-- Drupal's content administration -->
 								<section>
 									<h2>Administer your content</h2>
-									<p> <a href="https://sites.stanford.edu/uccm/admin/content" target="_blank">Home » Administration » Content </a></p>
+									<p> <a href="https://sites.stanford.edu/sites-demo/admin/content" target="_blank">Home » Administration » Content </a></p>
 									<iframe src="file:///Users/cjwest/Documents/presentations/images/administer-content.png" width="100%" height="400" frameborder="0" marginwidth="0" marginheight="0" scrolling="yes" style="border:3px solid #666; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe>
 									<aside class="notes">
 										Now that you have content on your site...
