--- a/building_site_next_steps.html
+++ b/building_site_next_steps.html
@@ -43,13 +43,14 @@
 						</tr>
 						<tr>
 							<td><a href="#/7">Editing content (WYSIWYG)</a></td>
+							<td><a href="#/8">Styling</a></td>
 						</tr>
 					</tbody>
 				</table>
 				<p>Something else?</p>
 
 				<p class="fragment"><em><a href="50_ways.html#/2">Back to Getting Started >></a></em></li></p>
-				<p class="fragment"><em><a href="#/8">Wrap it up >></a></em></li></p>
+				<p class="fragment"><em><a href="#/10">Wrap it up >></a></em></li></p>
 				<aside class="notes">
 					<ul>
 						<li>Now it's your turn!</li>
@@ -62,7 +63,7 @@
 
 			<section id="menus">
 				<h2>Using Menus</h2>
-				<p><a href="https://sites.stanford.edu/uccm/admin/structure/menu/manage/main-menu" target="_blank">Editing Main menu</a></p>
+				<p><a href="https://sites.stanford.edu/sites-demo/admin/structure/menu/manage/main-menu" target="_blank">Editing Main menu</a></p>
 				<p class="fragment"><em><a href="#/0">What next?</a></em></p>
 			</section>
 
@@ -81,103 +82,126 @@
 				<section>
 					<h2>Using Blocks</h2>
 					<ul>
-						<li><a href="https://sites.stanford.edu/uccm/admin/people/permissions" target="_blank">Verify permissions</a></li>
-					  <li><a href="https://sites.stanford.edu/uccm/block/add" target="_blank">Adding blocks </a></li>
-						<li><a href="https://sites.stanford.edu/uccm/admin/structure/block" target="_blank">Placing blocks </a></p></li>
+						<li><a href="https://sites.stanford.edu/sites-demo/admin/people/permissions" target="_blank">Verify permissions</a></li>
+						<li><a href="https://sites.stanford.edu/sites-demo/block/add" target="_blank">Adding blocks </a></li>
+						<li><a href="https://sites.stanford.edu/sites-demo/admin/structure/block" target="_blank">Placing blocks </a></p></li>
 					</ul>
-						<p class="fragment"><em><a href="#/0">What next?</a></em></p>
-					</section>
+					<p class="fragment"><em><a href="#/0">What next?</a></em></p>
 				</section>
+			</section>
 
-				<section id="news">
+			<section id="news">
+				<section>
+					<h2>Stanford News</h2>
+					<p>Enable modules: </p>
+					<ul>
+						<li>Stanford News</li>
+						<li>Stanford News Views</li>
+					</ul>
+				</section>
+				<section>
+					<h2>Using News</h2>
+					<ul>
+						<li><a href="https://sites.stanford.edu/sites-demo/node/add/stanford-news-item" target="_blank">Adding a news item</a></li>
+						<li><a href="https://sites.stanford.edu/sites-demo/news/recent-news" target="_blank">Displaying multiple news items</a></li>
+					</ul>
+					<p class="fragment"><em><a href="#/0">What next?</a></em></p>
+				</section>
+			</section>
+
+			<section id="events">
+				<section>
+					<h2>Stanford Events</h2>
+					<p>Enable modules: </p>
+					<ul>
+						<li>Stanford Events</li>
+						<li>Stanford Event Views</li>
+						<li>Stanford Event Importer</li>
+					</section>
 					<section>
-						<h2>Stanford News</h2>
-						<p>Enable modules: </p>
+						<h2>Using Events</h2>
 						<ul>
-							<li>Stanford News</li>
-							<li>Stanford News Views</li>
+							<li><a href="https://sites.stanford.edu/sites-demo/node/add/stanford-event" target="_blank">Adding an Event</a></li>
+							<li><a href="https://sites.stanford.edu/sites-demo/node/add/stanford-event-importer" target="_blank">Importing events</a></li>
+							<li><a href="https://sites.stanford.edu/sites-demo/events/upcoming-events" target="_blank">Displaying multiple upcoming events</a></li>
 						</ul>
 					</section>
 					<section>
-						<h2>Using News</h2>
-						<ul>
-							<li><a href="https://sites.stanford.edu/uccm/node/add/stanford-news-item" target="_blank">Adding a news item</a></li>
-							<li><a href="https://sites.stanford.edu/uccm/news/recent-news" target="_blank">Displaying multiple news items</a></li>
-						</ul>
-						<p class="fragment"><em><a href="#/0">What next?</a></em></p>
-					</section>
-				</section>
-
-				<section id="events">
-					<section>
-						<h2>Stanford Events</h2>
-						<p>Enable modules: </p>
-						<ul>
-							<li>Stanford Events</li>
-							<li>Stanford Event Views</li>
-							<li>Stanford Event Importer</li>
+						<h2>Learn about importing events</h2>
+						<p>	<a href="https://swsblog.stanford.edu/" target="_blank">https://swsblog.stanford.edu/</a>
+							<br>
+							See blog post:
+							<br>
+							<em>Module of the day: Stanford Events Importer</em></p>
+							<p class="fragment"><em><a href="#/0">What next?</a></em></p>
 						</section>
+					</section>
+
+
+					<section id="courses">
 						<section>
-							<h2>Using Events</h2>
+							<h2>Stanford Courses</h2>
+							<p>Enable modules: </p>
 							<ul>
-								<li><a href="https://sites.stanford.edu/uccm/node/add/stanford-event" target="_blank">Adding an Event</a></li>
-								<li><a href="https://sites.stanford.edu/uccm/events/upcoming-events" target="_blank">Displaying multiple upcoming events</a></li>
-								<li><a href="https://sites.stanford.edu/uccm/node/add/stanford-event-importer" target="_blank">Importing events</a></li>
+								<li>Stanford Courses</li>
+								<li>Stanford Course Views</li>
 							</ul>
 						</section>
 						<section>
-							<h2>Learn about importing events</h2>
-							<p>	<a href="https://swsblog.stanford.edu/" target="_blank">https://swsblog.stanford.edu/</a>
+							<h2>Importing Courses</h2>
+							<ul>
+								<li>Get URL from <a href="https://explorecourses.stanford.edu">ExploreCourses</a></li>
+								<li>Create a <a href="https://sites.stanford.edu/sites-demo/node/add/stanford-course-importer">Course Importer node</a></li>
+								<li>See <a href="https://sites.stanford.edu/sites-demo/courses">current courses</a></li>
+								<li>See <a href="https://sites.stanford.edu/sites-demo/courses/search">all courses</a></li>
+							</ul>
+						</section>
+
+						<section>
+							<h2>Learn more about importing courses</h2>
+							<p><a href="https://swsblog.stanford.edu/" target="_blank">https://swsblog.stanford.edu/</a></p>
+							<p>See blog post:
+								<br> <em>Importing Courses from ExploreCourses</em></p>
 								<br>
-								See blog post:
-								<br>
-								<em>Module of the day: Stanford Events Importer</em></p>
 								<p class="fragment"><em><a href="#/0">What next?</a></em></p>
 							</section>
 						</section>
 
-
-						<section id="courses">
+						<section id="people">
 							<section>
-								<h2>Stanford Courses</h2>
+								<h2>Stanford Person</h2>
 								<p>Enable modules: </p>
 								<ul>
-									<li>Stanford Courses</li>
-									<li>Stanford Course Views</li>
+									<li>Stanford Person</li>
+									<li>Stanford Person Views</li>
 								</ul>
-							</section>
-							<section>
-								<h2>Using Courses</h2>
-								<ul>
-									<li><a href="https://sites.stanford.edu/uccm/node/add/stanford-course-importer" target="_blank">Importing courses</a></li>
-									<li><a href="https://sites.stanford.edu/uccm/courses/search" target="_blank">Displaying multiple courses</a></li>
-								</ul>
-							</section>
-							<section>
-								<h2>Learn about importing courses</h2>
-								<p><a href="https://swsblog.stanford.edu/" target="_blank">https://swsblog.stanford.edu/</a></p>
-								<p>See blog post:
-									<br> <em>Importing Courses from ExploreCourses</em></p>
-									<br>
-									<p class="fragment"><em><a href="#/0">What next?</a></em></p>
-								</section>
 							</section>
 
-							<section id="people">
-								<section>
-									<h2>Stanford Person</h2>
-									<p>Enable modules: </p>
-									<ul>
-										<li>Stanford Person</li>
-										<li>Stanford Person Views</li>
-									</ul>
-								</section>
-								<section>
-									<h2>Using People</h2>
-									<ul>
-										<li><a href="https://sites.stanford.edu/uccm/people/all/grid" target="_blank">Displaying multiple people</a></li>
-										<li><a href="https://sites.stanford.edu/uccm/node/add/stanford-person" target="_blank">Adding a person</a></li>
-									</ul>
+							<section>
+								<h2>Using People</h2>
+								<ul>
+									<li><a href="https://sites.stanford.edu/sites-demo/people/all/grid" target="_blank">Displaying multiple people</a></li>
+									<li><a href="https://sites.stanford.edu/sites-demo/node/add/stanford-person" target="_blank">Adding a person</a></li>
+								</ul>
+							</section>
+							<section>
+								<h2>Import from CAP</h2>
+								<ul>
+									<li>Enable Stanford CAPx</li>
+									<li>Get Credentials (submit HelpSU)</li>
+									<li>Set up <a href="https://sites.stanford.edu/sites-demo/admin/config/capx">importer</a></li>
+								</ul>
+								<aside class="notes">
+									CAP Credentials
+									<a href="https://asconfluence.stanford.edu/confluence/display/SWS/CAP+Info">
+										https://asconfluence.stanford.edu/confluence/display/SWS/CAP+Info</a>
+
+										<ul>
+											<li>peoplesites</li>
+											<li>AdjirEijDugFauwiejno</li>
+										</ul>
+									</aside>
+
 								</section>
 								<section>
 									<h2>Learn about linking profiles </h2>
@@ -192,7 +216,7 @@
 								<section id="wysiwug">
 									<section>
 										<h2>Using the Text Editor</h2>
-										<p><a href="https://sites.stanford.edu/uccm/node/add/stanford-page" target="_blank">Editing Text</a></p>
+										<p><a href="https://sites.stanford.edu/sites-demo/node/add/stanford-page" target="_blank">Editing Text</a></p>
 									</section>
 									<section>
 										<h2>Do more with the editor </h2>
@@ -203,6 +227,21 @@
 										</section>
 									</section>
 
+									<section id="styling">
+										<h2>Styling with CSS</h2>
+										<p></p>
+										<ul>
+											<li>Enable <a href="https://sites.stanford.edu/sites-demo/admin/config/development/css-injector">CSS Injector</a></li>
+											<li>Example rule:</li>
+											<ul>
+												<li>
+													<div>.node .postcard-image.group_s_postcard_image {<br>
+														float:right;<br>
+													}</div>
+												</li>
+											</ul>
+										</ul>
+									</section>
 
 									<section>
 										<h2>Questions?</h2>
